--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </main>
 
   <!-- PRODUCT DETAIL VIEW -->
-  <main id="view-product" hidden>
+  <main id="view-product" style="justify-content: center; justify-items: center; display: grid;" hidden>
     <section class="container product">
       <a href="products.html" class="back">&larr; <span data-i18n="back">Назад</span></a>
       <div class="product-grid">
