--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div id="lang-toast" class="toast" hidden><span id="lang-toast-text">UA</span></div>
 
   <!-- MAIN VIEWS -->
-  <main id="view-home">
+  <main id="view-home" style="justify-content: center; justify-items: center;">
     <!-- Hero: Hot & New -->
     <section class="hero container" id="hero">
       <div class="hero-card hot">
@@ -88,7 +88,7 @@
   </main>
 
   <!-- PRODUCT DETAIL VIEW -->
-  <main id="view-product" style="justify-content: center; justify-items: center; display: grid;" hidden>
+  <main id="view-product" style="justify-content: center; justify-items: center;" hidden>
     <section class="container product">
       <a href="products.html" class="back">&larr; <span data-i18n="back">Назад</span></a>
       <div class="product-grid">
