--- a/products.html
+++ b/products.html
@@ -11,7 +11,7 @@
 <body>
   <div id="header-root"></div>
 
-  <main class="container" style="margin-top:12px">
+  <main class="container" style="justify-content: center; justify-items: center; margin-top:12px;">
     <div class="section-head">
       <h3 data-i18n="products.title">Усі продукти</h3>
     </div>
