--- a/products.html
+++ b/products.html
@@ -11,8 +11,8 @@
 <body>
   <div id="header-root"></div>
 
-  <main class="container" style="justify-content: center; justify-items: center; margin-top:12px;">
-    <div class="section-head">
+  <main class="container" style="justify-content: center; justify-items: center; margin: 12px auto; display: grid;">
+    <div class="section-head" style="margin-right: auto;">
       <h3 data-i18n="products.title">Усі продукти</h3>
     </div>
     <div id="catalog-grid" class="grid"></div>
