--- a/products.html
+++ b/products.html
@@ -11,7 +11,7 @@
 <body>
   <div id="header-root"></div>
 
-  <main class="container" style="justify-content: center; justify-items: center; margin: 12px auto; display: grid;">
+  <main class="container" style="justify-content: center; justify-items: center; margin: 12px auto; display: grid; padding: 0 15px;">
     <div class="section-head" style="margin-right: auto;">
       <h3 data-i18n="products.title">Усі продукти</h3>
     </div>
