--- a/links.html
+++ b/links.html
@@ -11,7 +11,7 @@
 <body>
   <div id="header-root"></div>
 
-  <main class="container" style="margin-top:12px" id="links-page">
+  <main class="container" style="margin: 12px auto;" id="links-page">
     <div class="section-head">
       <h3 data-i18n="links.heading">Посилання</h3>
       <p class="muted" data-i18n="footer.tagline">3D-друк з увагою до деталей</p>
